--- a/build.gradle
+++ b/build.gradle
@@ -1,16 +1,17 @@
 plugins {
-    id 'java'
+    id 'org.springframework.boot' version '2.0.6.RELEASE'
 }
 
-group 'com.pangyo.blog'
-version '1.0-SNAPSHOT'
-
-sourceCompatibility = 1.8
+apply plugin: 'java'
+apply plugin: 'io.spring.dependency-management'
 
 repositories {
-    mavenCentral()
+    jcenter()
 }
 
 dependencies {
-    testCompile group: 'junit', name: 'junit', version: '4.12'
+    implementation 'org.springframework.boot:spring-boot-starter-web'
+    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+    compile 'com.h2database:h2'
+    compile 'org.projectlombok:lombok'
 }
