--- a/build.gradle
+++ b/build.gradle
@@ -1,17 +1,34 @@
 plugins {
     id 'org.springframework.boot' version '2.0.6.RELEASE'
+    id "com.ewerk.gradle.plugins.querydsl" version "1.0.10"
 }
 
 apply plugin: 'java'
+apply plugin: 'idea'
 apply plugin: 'io.spring.dependency-management'
+apply plugin: 'org.springframework.boot'
 
 repositories {
     jcenter()
 }
+querydsl {
+    querydslDefault = true
+    jpa = true
+}
 
 dependencies {
-    implementation 'org.springframework.boot:spring-boot-starter-web'
-    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+    // spring
+    compile 'org.springframework.boot:spring-boot-starter-web'
+    compile 'org.springframework.boot:spring-boot-starter-data-jpa'
+
+    // db
+    compile 'com.querydsl:querydsl-jpa:4.2.1'
     compile 'com.h2database:h2'
+
+    //etc
+    compile 'org.springframework.boot:spring-boot-starter-thymeleaf'
+    compile 'org.webjars:jquery:3.3.1-1'
     compile 'org.projectlombok:lombok'
+
+    testCompile 'org.springframework.boot:spring-boot-starter-test'
 }
