jooq, flyway 적용

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,11 @@
 # Created by https://www.gitignore.io/api/java,gradle,java-web,intellij+all
 # Edit at https://www.gitignore.io/?templates=java,gradle,java-web,intellij+all
 
+### Custom
+
+#QueryDSL
+src/querydsl
+
 ### Intellij+all ###
 # Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio and WebStorm
 # Reference: https://intellij-support.jetbrains.com/hc/en-us/articles/206544839
