--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,9 +1,15 @@
 server:
   port: 8081
 spring:
-  h2:
-    console:
-      enabled: true
+  datasource:
+    driver-class-name: com.mysql.jdbc.Driver
+    url: jdbc:mysql://localhost:3306/your-blog
+    username: root
+    password: password
   thymeleaf:
     mode: HTML
     cache: false
+  jpa:
+    hibernate:
+      use-new-id-generator-mappings: false
+      ddl-auto: none
