--- a/build.gradle
+++ b/build.gradle
@@ -66,7 +66,7 @@ jooq {
 }
 
 flyway {
-    url = 'jdbc:mysql://localhost:3306?useSSL=false'
+    url = 'jdbc:mysql://localhost:3306?useSSL=false&allowPublicKeyRetrieval=true'
     user = 'root'
     password = 'password'
     schemas = ['your-blog']
