--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -13,3 +13,7 @@ spring:
     hibernate:
       use-new-id-generator-mappings: false
       ddl-auto: none
+    show-sql: true
+    properties:
+      hibernate:
+        format_sql: true
