--- a/build.gradle
+++ b/build.gradle
@@ -1,11 +1,11 @@
 plugins {
     id 'org.springframework.boot' version '2.0.6.RELEASE'
     id "com.ewerk.gradle.plugins.querydsl" version "1.0.10"
-    id "nu.studer.jooq" version "3.0.2"
+    // id "nu.studer.jooq" version "3.0.2"
     id "org.flywaydb.flyway" version "5.2.4"
 }
 
-ext['jooq.version'] = '3.11.2'
+// ext['jooq.version'] = '3.11.2'
 ext['lombok.version'] = '1.18.2'
 
 apply plugin: 'java'
@@ -25,13 +25,13 @@ dependencies {
     // spring
     compile 'org.springframework.boot:spring-boot-starter-web'
     compile 'org.springframework.boot:spring-boot-starter-data-jpa'
-    compile 'org.springframework.boot:spring-boot-starter-jooq'
+    // compile 'org.springframework.boot:spring-boot-starter-jooq'
     compile 'org.springframework.boot:spring-boot-devtools'
 
     // db
     compile 'com.querydsl:querydsl-jpa:4.2.1'
     runtime 'mysql:mysql-connector-java'
-    jooqRuntime 'mysql:mysql-connector-java'
+    // jooqRuntime 'mysql:mysql-connector-java'
     compile 'org.flywaydb:flyway-core'
 
     //etc
@@ -44,27 +44,27 @@ dependencies {
     testCompile 'org.springframework.boot:spring-boot-starter-test'
 }
 
-jooq {
-    version = '3.11.2'
-    edition = 'OSS'
-    sample(sourceSets.main) {
-        jdbc {
-            driver = 'com.mysql.jdbc.Driver'
-            url = 'jdbc:mysql://localhost:3306/your-blog'
-            user = 'root'
-            password = 'password'
-        }
-        generator {
-            database {
-                includes = 'your-blog.*'
-                excludes = '.'
-            }
-            target {
-                packageName = 'com.jooq'
-            }
-        }
-    }
-}
+//jooq {
+//    version = '3.11.2'
+//    edition = 'OSS'
+//    sample(sourceSets.main) {
+//        jdbc {
+//            driver = 'com.mysql.jdbc.Driver'
+//            url = 'jdbc:mysql://localhost:3306/your-blog'
+//            user = 'root'
+//            password = 'password'
+//        }
+//        generator {
+//            database {
+//                includes = 'your-blog.*'
+//                excludes = '.'
+//            }
+//            target {
+//                packageName = 'com.jooq'
+//            }
+//        }
+//    }
+//}
 
 flyway {
     url = 'jdbc:mysql://localhost:3306?useSSL=false&allowPublicKeyRetrieval=true'
@@ -77,5 +77,6 @@ bootRun {
     sourceResources sourceSets.main
 }
 
-project.tasks.getByName('initQuerydslSourcesDir').dependsOn += 'generateSampleJooqSchemaSource'
-project.tasks.getByName('generateSampleJooqSchemaSource').dependsOn += 'flywayMigrate'
+//project.tasks.getByName('initQuerydslSourcesDir').dependsOn += 'generateSampleJooqSchemaSource'
+//project.tasks.getByName('generateSampleJooqSchemaSource').dependsOn += 'flywayMigrate'
+project.tasks.getByName('initQuerydslSourcesDir').dependsOn += 'flywayMigrate'
