--- a/build.gradle
+++ b/build.gradle
@@ -27,6 +27,7 @@ dependencies {
     compile 'org.springframework.boot:spring-boot-starter-data-jpa'
     // compile 'org.springframework.boot:spring-boot-starter-jooq'
     compile 'org.springframework.boot:spring-boot-devtools'
+    compile 'org.springframework.boot:spring-boot-starter-cache'
 
     // db
     compile 'com.querydsl:querydsl-jpa:4.2.1'
