--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,7 +3,7 @@ server:
 spring:
   datasource:
     driver-class-name: com.mysql.jdbc.Driver
-    url: jdbc:mysql://localhost:3306/your-blog
+    url: jdbc:mysql://localhost:3306/your-blog?useSSL=false
     username: root
     password: password
   thymeleaf:
