이미지 저장 controller 추가, 기본 팝업 레이아웃 추가

--- a/build.gradle
+++ b/build.gradle
@@ -16,6 +16,10 @@ apply plugin: 'org.springframework.boot'
 repositories {
     jcenter()
 }
+
+sourceCompatibility = 1.8
+targetCompatibility = 1.8
+
 querydsl {
     querydslDefault = true
     jpa = true
