--- a/build.gradle
+++ b/build.gradle
@@ -72,7 +72,7 @@ dependencies {
 //}
 
 flyway {
-    url = 'jdbc:mysql://localhost:3306?useSSL=false&allowPublicKeyRetrieval=true'
+    url = 'jdbc:mysql://mysql:3306?useSSL=false&allowPublicKeyRetrieval=true'
     user = 'root'
     password = 'password'
     schemas = ['your-blog']
