--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -5,7 +5,7 @@ server:
 spring:
   datasource:
     driver-class-name: com.mysql.jdbc.Driver
-    url: jdbc:mysql://localhost:3306/your-blog?useSSL=false
+    url: jdbc:mysql://localhost:3306/your-blog?useSSL=false&allowPublicKeyRetrieval=true
     username: root
     password: password
   thymeleaf:
